# LockDown

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/LockDown/: Controller.h  CryptoAES.h  FileStorage.h  LogEntry.h  MasterAuth.h  PasswordEntry.h  PasswordManager.h  UserAccount.h  Vault.cpp  Vault.h
src/: Controller.cpp  CryptoAES.cpp  FileStorage.cpp  LockDown.cpp  LogEntry.cpp  MY_GLOBALS_H.h  MasterAuth.cpp  PasswordEntry.cpp  PasswordManager.cpp  Vault.cpp
src/cpp/: Controller.cpp  CryptoAES.cpp  FileStorage.cpp  LockDown.cpp  LogEntry.cpp  MasterAuth.cpp  UserAccount.cpp  Vault.cpp
src/headers/: Controller.h  FileStorage.h  MasterAuth.h  UserAccount.h  Vault.h  resource.h
